[metadata]
name = importTime
version = 1.0.0
author = Justin Jaro
author_email = info@VLTMedia.com
url = https://VLTMedia.com
description = Debug import time or use this inside of a profiler.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
[tool.setuptools.packages]
find = {importTime}  # Scan the project directory with the default parameters
[options]
packages = find:

